--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -42,6 +42,9 @@ jobs:
     - name: Terraform Plan
       run: terraform plan -input=false
 
+    - name: PrintReaf name
+      run: echo "##[set-output name=branch;]${GITHUB_REF#refs/heads/}
+
       # On push to "main", build or change infrastructure according to Terraform configuration files
       # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
     - name: Terraform Apply
